--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="https://res.cloudinary.com/ms-global/image/upload/v1635432768/msAssets/global_favicon_mtnlkz.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<title>M.S. Global</title>
+		<title>M.S. Global.co.il</title>
 
 		
 
